[package]
name = "rdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
